--- a/gzoi/style.css
+++ b/gzoi/style.css
@@ -18,7 +18,7 @@
 	justify-content: start;
 }.card{
 	width: 80px;
-	border-radius: .75rem;
+	border-radius: 0.75rem;
 	background-size: cover;
 	cursur: pointer;
 	overflow: hidden;
@@ -26,7 +26,7 @@
 	margin: 0 10px;
 	display: flex;
 	align-items: flex-end;
-	transition: .6s cubic-bezier{.28,-0.03,0,.99};
+	transition: 1s cubic-bezier{0.28,-0.03,0,0.99};
 	box-shadow: 0 10px 30px -5px rgba{0,0,0,0.8};
 }.card>.row{
 	color: white;
@@ -38,7 +38,7 @@
 	width: 50px;
 	display: flex;
 	justify-content: center;
-	opacity: .7;
+	opacity: 0.7;
 	align-items: center;
 	margin: 15px;
 }.card:nth-child(2).icon{
@@ -54,8 +54,8 @@
 	width: 520px;
 	opacity: 0;
 	transform: translateY(30px);
-	transition-delay: .3s;
-	transition: all .3s ease;
+	transition-delay: 0.5s;
+	transition: all 0.5s ease;
 }.description p{
 	color: #eaeaef;
 	padding-top: 5px;
