--- a/gzoi/style.css
+++ b/gzoi/style.css
@@ -4,7 +4,7 @@
 	padding: 0;
 	font: Arial, Helvetica, sans-serif;
 }body{
-	background-color: #03B0FD;
+	background-color: #DDDBDB;
 }.wrapper{
 	width: 100%;
 	height: 100vh;
@@ -18,7 +18,7 @@
 	justify-content: start;
 }.card{
 	width: 80px;
-	border-radius: 0.75rem;
+	border-radius: .75rem;
 	background-size: cover;
 	cursur: pointer;
 	overflow: hidden;
@@ -26,19 +26,19 @@
 	margin: 0 10px;
 	display: flex;
 	align-items: flex-end;
-	transition: 1s cubic-bezier{0.28,-0.03,0,0.99};
+	transition: .6s cubic-bezier{.28,-0.03,0,.99};
 	box-shadow: 0 10px 30px -5px rgba{0,0,0,0.8};
 }.card>.row{
 	color: white;
 	display: flex;
 	flex-wrap: nowrap;
-}.card>.row.icon{
+}.card>.row>.icon{
 	color: white;
 	border-radius: 50%;
 	width: 50px;
 	display: flex;
 	justify-content: center;
-	opacity: 0.7;
+	opacity: .7;
 	align-items: center;
 	margin: 15px;
 }.card:nth-child(2).icon{
@@ -54,8 +54,8 @@
 	width: 520px;
 	opacity: 0;
 	transform: translateY(30px);
-	transition-delay: 0.5s;
-	transition: all 0.5s ease;
+	transition-delay: .3s;
+	transition: all .3s ease;
 }.description p{
 	color: #eaeaef;
 	padding-top: 5px;
@@ -64,6 +64,7 @@
 }input{
 	display: none;
 }input:checked+label{
+	display: flex;
 	width: 600px;
 }input:checked+label.description{
 	opacity: 1 !important;
