--- a/gzoi/style.css
+++ b/gzoi/style.css
@@ -70,5 +70,5 @@
 }.card[for = 'c1']{
 	background-image: url("/01/gzoi/img/chapter_1.jpg");
 }.card[for = 'c2']{
-	background-image: url("/01/gzoi/img/gzoi_1.jpeg");
+	background-image: url("/01/gzoi/img/gzoi_1.jpg");
 }
