--- a/gzoi/style.css
+++ b/gzoi/style.css
@@ -4,7 +4,7 @@
 	padding: 0;
 	font-family: Arial, Helvetica, sans-serif;
 }body{
-	background-color: #DDDBDB;
+	background-color: #01d5ff;
 }.wrapper{
 	width: 100%;
 	height: 100vh;
@@ -56,7 +56,7 @@
 	transition-delay: .3s;
 	transition: all .3s ease;
 }.description p{
-	color: #eaeaef;
+	color: #2C2C2C;
 	padding-top: 5px;
 }.description h4{
 	text-transform: uppercase;
