--- a/gzoi/style.css
+++ b/gzoi/style.css
@@ -56,10 +56,10 @@
 	transition-delay: .3s;
 	transition: all .3s ease;
 }.description p{
-	color: #ff003b;
+	color: #fff700;
 	padding-top: 5px;
 }.description h4{
-	color: #ff003b;
+	color: #fff700;
 	text-transform: uppercase;
 }input{
 	display: none;
@@ -73,4 +73,3 @@
 }.card[for = 'c2']{
 	background-image: url("/01/gzoi/img/gzoi_1.jpg");
 }
-
